Fix 1 character typo breaking old-style safe for scripting controls. b=194281 r=dbradley@netscape.com sr=alecf@netscape.com a=asa@mozilla.org